# Alonemusic

./: pyproject.toml
.github/workflows/: codacy.yml  main.yml
AloneMusic/plugins/tools/: language.py
AloneMusic/utils/: thumbnails.py
